--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
       <div class="heit m-auto">
         <div class="line m-auto mb-5"></div>
       </div>
-      <h5 class="fw-light mb-5">تأسست شركة خارطة اإلنماء عام 2011 كشركة مهنية مختلطة لشركة نماء
+      <h5 class="fw-light mb-5">تأسست شركة خارطة الانماء عام 2011 كشركة مهنية مختلطة لشركة نماء
         للإستشارات الهندسية التي تاسست عام ،1998 تفخر الشركة بوجود أ.د عصام شرف
         كاستاذ هندسة الطرق و المطارات بجامعة القاهرة.
-        اعتمدت شركة خارطة اإلنماء للإستشارات الهندسية منهجية الإدارة المستدامة من
+        اعتمدت شركة خارطة الانماء للإستشارات الهندسية منهجية الإدارة المستدامة من
         أجل تقديم خدمة أفضل وأسرع لعملائها، من خلال التطبيق الأمثل للخدمات
         الاستشارية التي تعد أهم متطلبات السوق. وتشهد الشركة نمو 
         ا وتوسعاً محلياً 
