--- a/works.html
+++ b/works.html
@@ -271,7 +271,7 @@
                   مشروع نفق شارع التحلية </h5></a>
    
             </div>
-            <!-- <p class="ms-5">تفاصيل المشروع: دراسةً تحسينً الصورةًالبصرية للنفق.
+            <!-- <p class="ms-5 text-container">تفاصيل المشروع: دراسةً تحسينً الصورةًالبصرية للنفق.
                 العميل: أمانة نطقةًالرياض.
                 الموقع: الرياض ،المملكةًالعربية السعودية.</p> -->
                 <img  class="w-75 caro cir" data-bs-toggle="modal" data-bs-target="#tahlia" src="ImgNamaa/الصور-119.jpg" alt="">
@@ -362,7 +362,7 @@
                 </h5></a>
         
             </div>
-            <!-- <p class="ms-5">تفاصيل المشروع: دراسة وتصميم وتقديم المقترحات الالزمة لتطوير كوبري امبابة
+            <!-- <p class="ms-5 text-container">تفاصيل المشروع: دراسة وتصميم وتقديم المقترحات الالزمة لتطوير كوبري امبابة
                 التراثي بحيث يكون عالمة مميزة للمكان مع تقديم حلول ذكية ومبتكرة في استخداماتً
                 وأنشطة تحقق أفضل استخدام وأعلى ربحية.
                 العميل: إم.أو.تي لألستثمار والمشروعات.
@@ -387,7 +387,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> 
         </div>
         <div class="modal-body">
-          <p class="ms-5">تفاصيل المشروع: دراسة وتصميم جسر مشاة أمام مستشفى الملك فيصل التخصصي
+          <p class="ms-5 text-container">تفاصيل المشروع: دراسة وتصميم جسر مشاة أمام مستشفى الملك فيصل التخصصي
             ومركز أبحاث للربط مع سكن أطباء والممرض  
             للوصول إلى أفضل استخدام.
             العميل: أمانة منطقة الرياض.
@@ -428,7 +428,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="ms-5">تفاصيل المشروع:
+        <p class="ms-5 text-container">تفاصيل المشروع:
           - تصميم نفق لتحسين الوضع الحالي بالشارع.
           - دراسات )فنية، اقتصادية، بيئية، مسح طبوغرافي، تخطيط حركة المرور والسالمةًًً،
           هيدرولوجيا(.
@@ -471,7 +471,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="ms-5">تفاصيل المشروع: سيفصل الجسر المقترح حركة المرور إلى اتجاهين عند التقاطع
+        <p class="ms-5 text-container">تفاصيل المشروع: سيفصل الجسر المقترح حركة المرور إلى اتجاهين عند التقاطع
           مترا. المذكور أعاله. يبلغ  عرضا لجسر25.26 
           العميل: وزارة الشؤون البلديةوالقرويةً،أمانة  منطقة الرياض.
           الموقع: الرياض ،المملكةًالعربية السعودية.</p>
@@ -491,7 +491,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="ms-5">
+        <p class="ms-5 text-container">
           تفاصيل المشروع:
 
           - تصميم نفق لتحسين الوضع الحالي بالشارع.
@@ -522,7 +522,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="ms-5">تفاصيل المشروع: تم تصميم النفق بعرض إجمالي 27.40 مترا مع ثلاث حارات مرورية لكل
+        <p class="ms-5 text-container">تفاصيل المشروع: تم تصميم النفق بعرض إجمالي 27.40 مترا مع ثلاث حارات مرورية لكل
           اتجاه وطول إجمالي حوالي 750
           مترا. 
           العميل: وزارة الشؤون  البلدية  والقروية ،أمانة منطقة الرياض.
@@ -544,7 +544,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="ms-5">تفاصيل المشروع:
+        <p class="ms-5 text-container">تفاصيل المشروع:
           تطوير وتوسيع الطريق الحالي وطرق
           الخدمة ليصبح مزدوج مكون من 3 حارات.
           العميل: وزارة النقل.
@@ -567,7 +567,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p class="ms-5">تفاصيل المشروع:
+        <p class="ms-5 text-container">تفاصيل المشروع:
           - تغطية ازدواجية طريق لطائف  الباحة بطول120  كم وخمسة تقاطعات.
           - تصميم تقاطع خليص بمدينة خليص.
           العميل: وزارة النقل.
