--- a/services.html
+++ b/services.html
@@ -222,18 +222,11 @@
               <i  class="fas fa-building fs-4 p-2 me-2 icona w-25  text-end"></i>
               
             </div>
-            <p class="ms-5">التنمية العمرانية والتخطيط والتصميم الحضري:
-              تعد أقسام التخطيط العمراني والتصميم المعماري من الخدمات الاستشارية الرئيسية
-              التي تقدمها نماء،  
-               من المخطط الشامل وعمل النماذج الرقمية، مرورا  بالرسومات 
-              التنفيذية والإشراف على أعمال البناء.
-              وتعد التنمية المستدامة هي الإهتمام الأساسي لفريق العمل بشركة خارطة الانماء فيما
-              يتعلق بالتنمية الحضرية، كما يعمل المخطط الشامل علي إنشاء اتصال بين المباني
-              والإطارات الاجتماعية والبيئات المحيطة بها، ويتضمن المخطط الشامل على التحليل
-              والتوصيات والمقترحات المعنية بسكان الموقع والاقتصاد والإسكان والنقل والمرافق
-              المجتمعية واستخدام الأراضي، وهو ينبني على المدخلات العامة، والدراسات
-              الاستقصائية، والمبادرات التخطيطية والتنموية القائمة، و كذلك الخصائص المادية،
-              والظروف الاجتماعية والاقتصادية.</p>
+            <p class="ms-5">
+        التنمية العمرانية والتخطيط والتصميم الحضري: تعد أقسام التخطيط العمراني والتصميم المعماري من الخدمات الإستشارية الرئيسية التي تقدمها نماء، من المخطط الشامل وعمل النماذج الرقمية، مرورا بالرسومات التنفيذية والإشراف على أعمال البناء. وتعد التنمية المستدامة هي الإهتمام الأساسي لفريق العمل بشركة خارطة الانماء فيما يتعلق بالتنمية الحضرية، 
+كما يعمل المخطط الشامل علي إنشاء اتصال بين المباني والإطارات الإجتماعية والبيئات المحيطة بها، ويتضمن المخطط الشامل على التحليل والتوصيات والمقترحات المعنية بسكان الموقع والاقتصاد والإسكان والنقل والمرافق المجتمعية واستخدام الأراضي، وهو ينبني على المدخلات العامة، والدراسات الأستقصائية، والمبادرات التخطيطية والتنموية القائمة، وكذلك الخصائص المادية، والظروف الإجتماعية والإقتصادية.
+
+            </p>
 
 
           </div>
@@ -246,28 +239,14 @@
                 <!-- <i class="fas fa-star fs-4 p-2 me-2 icona w-25  text-end"></i> -->
                 <i class="fas fa-home fs-4 p-2 me-2 icona w-25  text-end"></i>
             </div>
-            <p class="ms-5">قسم الهندسة المعمارية
-              دورنا هو التخطيط الابداعي وتصميم حلول بناءة مبتكرة للعملاء. وكثيراً ما يتضمن ذلك
-              التخطيط الرئيسي وإدارة المشاريع، فضال عن أعمال التصميم. لذا فإن الهندسة المعمارية
-              التي نقدمها تستجيب الحتياجات وتطلعات عمالئنا ومجتمعاتها. نعطي الشكل والمعنى
-              دائما بين الوظائف الداخلية  للغرف والمباني وأعمال تنسيق الموقع والمدن. ونوازن
-              والمتطلبات الخارجية للموقع والمناخ والثقافة.
-              قسم التصميم الداخلي
-              نعمل بشكل شامل مع عمالئنا لتحقيق وتقديم تصاميم معاصرة عالية الجودة. وابتكار
-              صور للمفاهيم التصميمية متطورة بالكامل والوصول إلى التنفيذ المعماري، المدعوم بمستوى
-             عالي من المشاركة الشخصية لفريق التصميم لضمان تلبية أهداف عمالئنا. خدماتنا تم 
-              إعدادها لتفيد جميع أصحاب المصلحة: المالكين والمطورين والمشغلين والمجتمعات
-              المحلية.
-              القسم الانشائي
-              تضم خارطة الانماء صفوة من المهندسين المدنيين االستشاريين ذوي كفاءة مهنية عالية
-              وخبرة كبيرة في التخصص الانشائي. يهدف القسم الانشائي بالشركة إلى تلبية متطلبات
-              التصميم المعماري باستخدام الانظمة الانشائية الحديثة والمتطورة المختلفة في التصميم
-              الانشائي باستخدام أحدث البرامج الانشائية لمواكبة التطور والتحديات العصرية لألنماط
-              المعمارية المختلفة، كما يمتيز بالدقة بعمل ومراجعة الرسومات الهندسية المختلفة، كما
-              يتميز بإعادة تأهيل المنشآت القائمة باستخدام االختبارات المعملية والحقلية اللازمة،
-              والتأكد من آمان كافة العناصر الانشائية. وقد قام القسم الانشائي بالعديد من المشروعات
-              الانشائية الهامة والقومية المختلفة مثل ) المباني الشاهقة الارتفاع – مباني متعددة
-              الوظائف – محطات المعالجة – الخزانات بأنواعها (.</p>
+            <p class="ms-5">
+قسم الهندسة المعمارية دورنا هو التخطيط الابداعي وتصميم حلول بناءة مبتكرة للعملاء. وكثيراً ما يتضمن ذلك التخطيط الرئيسي وإدارة المشاريع، فضلاً عن أعمال التصميم. لذا فإن الهندسة المعمارية التي نقدمها تستجيب الاحتياجات وتطلعات عمالئنا ومجتمعنا. نعطي الشكل والمعنى دائما بين الوظائف الداخلية للغرف والمباني وأعمال تنسيق الموقع والمدن. ونوازن المتطلبات الخارجية للموقع والمناخ والثقافة. 
+قسم التصميم الداخلي
+نعمل بشكل شامل مع عمالئنا لتحقيق وتقديم تصاميم معاصرة عالية الجودة. وابتكار صور للمفاهيم التصميمية متطورة بالكامل والوصول إلى التنفيذ المعماري، المدعوم بمستوى عالي من المشاركة الشخصية لفريق التصميم لضمان تلبية أهداف عمالئنا. 
+خدماتنا تم إعدادها لتفيد جميع أصحاب المصلحة: المالكين والمطورين والمشغلين والمجتمعات المحلية. القسم الانشائي: تضم خارطة الانماء صفوة من المهندسين المدنيين الاستشاريين ذوي كفاءة مهنية عالية وخبرة كبيرة في التخصص الانشائي. يهدف القسم الانشائي بالشركة إلى تلبية متطلبات التصميم المعماري باستخدام الانظمة الانشائية الحديثة والمتطورة المختلفة في التصميم الانشائي باستخدام أحدث البرامج الانشائية لمواكبة التطور والتحديات العصرية الأنماط المعمارية المختلفة، 
+كما يمتيز بالدقة بعمل ومراجعة الرسومات الهندسية المختلفة، كما يتميز بإعادة تأهيل المنشآت القائمة باستخدام الاختبارات المعملية والحقلية اللازمة، والتأكد من آمان كافة العناصر الانشائية. وقد قام القسم الانشائي بالعديد من المشروعات الانشائية الهامة والقومية المختلفة مثل ( المباني الشاهقة الارتفاع – مباني متعددة الوظائف – محطات المعالجة – الخزانات بأنواعها (.
+
+            </p>
 
 
           </div>
@@ -277,21 +256,16 @@
             <div class="displayicon d-flex">
   
               <h3 class="w-100  text-end">
-                الهندسة الكهروميكانيكية</h3>
+                الهندسة الكهروميكانيكية
+              </h3>
                 <!-- <i class="fas fa-star fs-4 p-2 me-2 icona w-25  text-end"></i> -->
                 <i class="fas fa-plug fs-4 p-2 me-2 icona w-25  text-end"></i>
             </div>
-            <p class="ms-5">بشكل عام تشمل خدمات الهندسة الكهربائية والميكانيكية لدينا التصميم والهندسة
-              والاشراف على الكهرباء وأنظمة SCADA والبنية التحتية للاتصالات وأنظمة التيار الكهربائي.
-              نفذت نماء عدة مشاريع في قطاع البنية التحتية والمباني التجارية والسكنية والمشاريع
-              الصناعية التعليمية والرعاية الصحية والمؤسسات الخاصة ، وحرصت على تحقيق أعلى
-              معدلات الجودة والسالمة في مشاريعها. المدراء التنفيذيون والمهندسون المحترفون هم
-              عنصر أساسي وعنوان نجاحاتنا التي تم تحقيقها. نحرص دائما على تعزيز الطاقم والكوادر
-              الهندسية الفنية من خلال توفير الدورات التدريبية المتخصصة اللازمة والتي تقدم أحدث و
-              أفضل البرامج الهندسية.
-              خارطة الانماء لديها أفضل الادوات التقنية لانتاج المستندات اللازمة للمشاريع.اليوم أصبحت
-              نماء على أعتاب سلم التطور حيث يضيف نموها السريع في قطاع الطاقة إلى مجالات عملها؛
-              حيث تغطي النقل والتوزيع لمصادر الطاقة التقليدية والمتجددة.</p>
+            <p class="ms-5">
+           بشكل عام تشمل خدمات الهندسة الكهربائية والميكانيكية لدينا التصميم والهندسة والإشراف على الكهرباء وأنظمة SCADA والبنية التحتية للإتصالات وأنظمة التيار الكهربائي. نفذت نماء عدة مشاريع في قطاع البنية التحتية والمباني التجارية والسكنية والمشاريع الصناعية التعليمية والرعاية الصحية والمؤسسات الخاصة ، وحرصت على تحقيق أعلى معدلات الجودة والسلامة في مشاريعها. المدراء التنفيذيون والمهندسون المحترفون هم عنصر أساسي وعنوان نجاحاتنا التي تم تحقيقها. 
+نحرص دائما على تعزيز الطاقم والكوادر الهندسية و الفنية من خلال توفير الدورات التدريبية المتخصصة اللازمة والتي تقدم أحدث و أفضل البرامج الهندسية. خارطة الإنماء لديها أفضل الأدوات التقنية لانتاج المستندات اللازمة للمشاريع.اليوم أصبحت نماء على أعتاب سلم التطور حيث يضيف نموها السريع في قطاع الطاقة إلى مجالات عملها؛ حيث تغطي النقل والتوزيع لمصادر الطاقة التقليدية والمتجددة.
+
+            </p>
 
           </div>
 
@@ -308,28 +282,10 @@
                 <i class="fas fa-road fs-4 p-2 me-2 icona w-25  text-end"></i>
             </div>
             <p class="ms-5">
-              هندسة الطرق خبرة الشركة في هندسة الطرق السريعة والجسور واسعة، اكتسبتها من
-خلال المشاريع التي تحقق التوازن المثالي بين عناصر التصميم الحديثة والمتطلبات
-الثقافية المحلية. كما طورت نماء عددا من دراسات المرور التي أدت إلى تعزيز سالمة
-السفر وكفائته.
-شاركت شركة خارطة الانماء في التخطيط والاستطلاع ودراسات الجدوى والتصميم
-وإدارةالمشاريع.والاشراف على جميع فئات الطرق السريعة الحضرية والريفية. حتى الان
-صممت نماء وأشرفت على إنشاء عدد كبير من الطرق السريعة والشريانية.
-قسم كبارى وأنفاق:
-تمثل الحالة الهيكلية للاعمال الصناعية )كباري – أنفاق ... ( جزءا مه ما من شبكة النقل
-حيث يجب أن يحقق كل مشروع المواصفات الفنية والجمالية واالقتصادية والحل الاكثر
-استدامة لموقع معين وهو بالضبط ما نقوم به على الوجه الامثل.
-أحد أهم خدماتنا هو تصميم الاعمال الصناعية حيث أن لدينا مهندسين متميزين 
-متخصصين في هذا المجال. تتضمن الخدمات تخطيط وتصميم وإنشاء وصيانة الكباري
-والانفاق لضمان النقل الامن والفعال للاشخاص والبضائع.
-قسم تخطيط النقل والمرور:
-يوفر قسم تخطيط النقل والمرور حلولا واقعية واقتصادية ومستدامة تساعد العملاء على
-إدارة تحديات الاختناقات المرورية والسالمة على الطرق وأنظمة النقل البري.
-نحن نسخر خبراتنا لخدمة احتياجات عمالئنا في إدارة المرور والتشغيل األمثل لحركة المرور
-عند التقاطعات وتدقيق السالمة على الطرق وفحص وتحليل الحوادث ومسبباتها وكذلك
-مواقف السيارات وتحديد السرعات على الطرق وحركة المشاة وكذلك أنظمة النقل الذكية
-وشبكات النقل العام ومحاكاة حركة المرور المجهرية عن طريق تشكيل فرق عمل تتألف
-من المهنيين ذوي الخبرة المتنوعة وأحدث برمجيات النقل والمرور
+هندسة الطرق خبرة الشركة في هندسة الطرق السريعة والجسور واسعة، اكتسبتها من خلال المشاريع التي تحقق التوازن المثالي بين عناصر التصميم الحديثة والمتطلبات الثقافية المحلية. كما طورت نماء عددا من دراسات المرور التي أدت إلى تعزيز سالمة السفر وكفائته. شاركت شركة خارطة الانماء في التخطيط والاستطلاع ودراسات الجدوى والتصميم وإدارةالمشاريع.والإشراف على جميع فئات الطرق السريعة الحضرية والريفية. حتى الان صممت نماء وأشرفت على إنشاء عدد كبير من الطرق السريعة والشريانية. قسم كبارى وأنفاق: تمثل الحالة الهيكلية للأعمال الصناعية )كباري – أنفاق ... ) جزءاً مهما من شبكة النقل حيث يجب أن يحقق كل مشروع المواصفات الفنية والجمالية والإقتصادية والحل الأكثر إستدامة لموقع معين وهو بالضبط ما نقوم به على الوجه الأمثل. 
+أحد أهم خدماتنا هو تصميم الأعمال الصناعية حيث أن لدينا مهندسين متميزين متخصصين في هذا المجال. تتضمن الخدمات تخطيط وتصميم وإنشاء وصيانة الكباري والانفاق لضمان النقل الأمن والفعال للأشخاص والبضائع. قسم تخطيط النقل والمرور: يوفر قسم تخطيط النقل والمرور حلولا واقعية واقتصادية ومستدامة تساعد العملاء على إدارة تحديات الاختناقات المرورية والسالمة على الطرق وأنظمة النقل البري. 
+نحن نٌسخر خبراتنا لخدمة احتياجات عملائنا في إدارة المرور والتشغيل الأمثل لحركة المرور عند التقاطعات وتدقيق السلامة على الطرق وفحص وتحليل الحوادث ومسبباتها وكذلك مواقف السيارات وتحديد السرعات على الطرق وحركة المشاة وكذلك أنظمة النقل الذكية وشبكات النقل العام ومحاكاة حركة المرور المجهرية عن طريق تشكيل فرق عمل تتألف من المهنيين ذوي الخبرة المتنوعة وأحدث برمجيات النقل والمرور.
+
             </p>
 
           </div>
@@ -343,20 +299,12 @@
                 <!-- <i class="fas fa-star fs-4 p-2 me-2 icona w-25  text-end"></i> -->
                 <i class="fas fa-water fs-4 p-2 me-2 icona w-25  text-end"></i>
             </div>
-            <p class="ms-5">تشمل أعمال البنية التحتية أعمال شبكات المياة والصرف الصحي والكهربا والاتصالات
-              وتصريف مياة الامطار وشبكات الري وتنفيذ الارصفة وأعمال طبقات الرصف وكذلك اعمال
-              السالمة المرورية.
-              كما تشهد المملكة إزدهار وتوسع فى التنمية العمرانية مما نتج عنه زيادة فى المخططات
-              السكنية والتى تتطلب إنشاء أعمال البنية التحتية حتى يتم تهيئة وتأهيل هذة المخططات
-              للبناء وإستقبال السكان.
-              قسم المياه والصرف الصحي
-              يتمتع فريقنا بخبرة في الخطط الرئيسية وتصميم شبكات المياه والصرف الصحي بما في
-              ذلك محطات المعالجة ومحطات الرفع وأعمدة الضغط وخزانات الري وخزانات المياه
-              المرتفعة ومحطات الضخ.
-              قسم الحماية من العواصف والفيضانات
-              يشكل تغير المناخ تهديدا متزايدا للبنية التحتية االجتماعية واالقتصادية العالمية. لذلك
-              نحن نساعد عمالئنا على بناء بنية تحتية قوية ودائمة طويلة األجل تستجيب بشكل جيد
-              للظواهر المناخية المتطرفة واالستعداد لتأثيرات تغير المناخ دون تغير ملحوظ في التكلفة.</p>
+            <p class="ms-5">
+            تشمل أعمال البنية التحتية أعمال شبكات المياة والصرف الصحي والكهرباء والإتصالات وتصريف مياه الأمطار وشبكات الري وتنفيذ الأرصفة وأعمال طبقات الرصف وكذلك أعمال السلامة المرورية. كما تشهد المملكة إزدهار وتوسع فى التنمية العمرانية مما نتج عنه زيادة فى المخططات السكنية والتى تتطلب إنشاء أعمال البنية التحتية حتى يتم تهيئة وتأهيل هذه المخططات للبناء وإستقبال السكان.
+قسم المياه والصرف الصحي : يتمتع فريقنا بخبرة في الخطط الرئيسية وتصميم شبكات المياه والصرف الصحي بما في ذلك محطات المعالجة ومحطات الرفع وأعمدة الضغط وخزانات الري وخزانات المياه المرتفعة ومحطات الضخ.
+قسم الحماية من العواصف والفيضانات: يشكل تغير المناخ تهديداً متزايداً للبنية التحتية الإجتماعية والإقتصادية العالمية. 
+لذلك نحن نساعد عمالئنا على بناء بنية تحتية قوية ودائمة طويلة الأجل تستجيب بشكل جيد للظواهر المناخية المتطرفة والإستعداد لتأثيرات تغير المناخ دون تغير ملحوظ في التكلفة.
+</p>
 
           </div>
 
@@ -370,16 +318,11 @@
               <!-- <i class="fas fa-star fs-4 p-2 me-2 icona w-25  text-end"></i> -->
               <i class="fas fa-book fs-4 p-2 me-2 icona w-25  text-end"></i>
             </div>
-            <p class="ms-5">قسم إدارة أصول الطرق:
-              تشمل شبكة الطرق أصول منها الرصف والارصفة والجسور الانفاق واللوحات وشبكة
-              تصريف السيول وشبكات الانارة وغيرها من الاصول التى كلف إنشائها الكثير من
-              المليارات، والتى تتطلب الحفاظ عليها فى حالة تشغيلية جيدة.
-              تعمل أنظمة إدارة أصول شبكات الطرق على الحفاظ على هذة الاصول لاطول فترة ممكنة
-              من خلال التقييم الدوري لهذة الاصول وإصدار قرارات الصيانة المناسبة فى الوقت
-              المناسب مع أولويات الصيانة التى تساهم فى الاستغلال الامثل للميزانيات المتاحة.
-              كما تساهم أنظمة إدارة أصول شبكات الطرق في إيجاد نماذج تنبؤ بحالة أصول شبكة
-              الطرق المستقبلية مما يساعد على معرفة الميزانيات المطلوبة لتشغيل وصيانة هذة
-              الاصول وإعدادالعقود اللازمة لذلك.</p>
+            <p class="ms-5">
+             قسم إدارة أصول الطرق: تشمل شبكة الطرق أصول منها الرصف والأرصفة والجسور الأنفاق واللوحات وشبكة تصريف السيول وشبكات الانارة وغيرها من الاصول التى كلف إنشائها الكثير من المليارات، والتى تتطلب الحفاظ عليها فى حالة تشغيلية جيدة. تعمل أنظمة إدارة أصول شبكات الطرق على الحفاظ على هذة الاصول لاطول فترة ممكنة من خلال التقييم الدوري لهذه الأصول وإصدار قرارات الصيانة المناسبة فى الوقت المناسب مع أولويات الصيانة التى تساهم فى الإستغلال الأمثل للميزانيات المتاحة. 
+كما تساهم أنظمة إدارة أصول شبكات الطرق في إيجاد نماذج تنبؤ بحالة أصول شبكة الطرق المستقبلية مما يساعد على معرفة الميزانيات المطلوبة لتشغيل وصيانة هذه الأصول وإعدادالعقود اللازمة لذلك.
+
+            </p>
 
           </div>
 
@@ -413,30 +356,31 @@
               <!-- <i class="fas fa-star fs-4 p-2 me-2 icona w-25  text-end"></i> -->
               <i class="fas fa-laptop fs-4 p-2 me-2 icona w-25  text-end"></i>
             </div>
-            <p class="ms-5">نظم المعلومات الجغرافية (GIS (هو إطار لجمع البيانات وإدارتها وتحليلها. متجذ را في علم
+            <p class="ms-5">
+     نظم المعلومات الجغرافية (GIS (هو إطار لجمع البيانات وإدارتها وتحليلها. متجذرا في علم
               الجغرافيا، (GIS (يدمج أنواعا عديدة من البيانات. يحلل الموقع المكاني وينظم طبقات
-              المعلومات في تصورات باستخدام الخرائط والمشاهد ثلاثية الابعاد. باستخدام هذه اإلمكانية
+              المعلومات في تصورات باستخدام الخرائط والمشاهد ثلاثية الابعاد. باستخدام هذه الامكانية
               الفريدة، يكشف ) (SIGعن رؤية أعمق للبيانات، مثل الانماط والعالقات والمواقف، مما
-               ء.
               يساعد المستخدمين على اتخاذ قرارات أكثر ذكا
-              تقريب نظم المعلومات الجغرافية لعمل تستخدم مئات الالاف من المنظمات في كل مجال ا
-              خرائط تتواصل وتنفذ التحليل وتشارك المعلومات وتحل المشكلات المعقدة حول العالم.
+              تقريب نظم المعلومات الجغرافية لعمل تستخدم مئات الالاف من المنظمات في كل مجال 
+              الخرائط تتواصل وتنفذ التحليل وتشارك المعلومات وتحل المشكلات المعقدة حول العالم.
               هذا يغير الطريقة التي يعمل بها العالم.
               تطبق تكنولوجيا نظم المعلومات الجغرافية العلوم الجغرافية بأدوات للتفاهم والتعاون.
-              يساعد األشخاص في الوصول إلى هدف مشترك: ا كتساب ذكاء عملي من جميع أنواع
+              يساعد الاشخاص في الوصول إلى هدف مشترك: اكتساب ذكاء عملي من جميع أنواع
               البيانات
               خرائط:
               الخرائط هي الحاوية الجغرافية لطبقات البيانات والتحليالت التي تريد العمل بها. يمكن
               مشاركة خرائط(GIS (بسهولة وتضمينها في التطبيقات، ويمكن الوصول إليها من قبل
-               الجميع ا
+               الجميع 
               تقريب في كل مكان.
               البيانات:
-              يدمج نظام المعلومات الجغرافية أنوا عا مختلفة من طبقات البيانات باستخدام الموقع
+              يدمج نظام المعلومات الجغرافية أنواعا مختلفة من طبقات البيانات باستخدام الموقع
               المكاني. معظم البيانات لها مكون جغرافي. تتضمن بيانات (GIS(الصور والميزات وخرائط
               الاساس المرتبطة بجداول البيانات والجداول.
               تحليل:
-              يتيح لك التحليل المكاني تقييم الملائمة والقدرة، التقدير والتنبؤ، التفسير والفهم وأ كثر من
-              ذلك بكثير، مما يضفي وجهات نظر جديدة على رؤيتك واتخاذك للقرارات.</p>
+              يتيح لك التحليل المكاني تقييم الملائمة والقدرة، التقدير والتنبؤ، التفسير والفهم وأكثر من
+              ذلك بكثير، مما يضفي وجهات نظر جديدة على رؤيتك واتخاذك للقرارات.
+            </p>
 
           </div>
 
