--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             التحديات</h3>
 
           <h3 class="fw-light w-100 text-end"><h6 class="blu w-100 text-center"> :قيمنا </h6>
-            نحن نجمع بين الاحترافً الهندسي والنزاهةً،السلوك الاخلاقي ،تعميم 
+            نحن نجمع بين الاحتراف الهندسي والنزاهة،السلوك الاخلاقي ،تعميم 
         ثقافة الإحترام المتبادل،التفكير الخلاق</h3>
 
         </div>
