--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
   <div class="home mb-5 position-relative">
     
   <div class="load m-auto">
-    <div class="spin ">
+    <div class="spin  w-100">
  
+     <div class="m-auto text-center  w-25">
       <img class="w " width="100rem"  src="ImgNamaa/Namaa Logo-01.jpg" alt="">
+     </div>
          <div >
           <!-- <div class="spinner-border text-muted warningbg-  "></div> -->
 
-            <div class=" w-50 text-center">
-              <div class="spinner-border text-muted warningbg-   "></div>
-              <div class="spinner-border text-muted warningbg-   "></div>
-              <div class="spinner-grow " role="status">
+            <div class=" w-50 text-center  w-100">
+              <div class="spinner-border text-muted warningbg- m-auto   "></div>
+              <!-- <div class="spinner-border text-muted warningbg-   "></div> -->
+              <!-- <div class="spinner-grow " role="status">
                 <span class="visually-hidden">Loading...</span>
               </div>
               <div class="spinner-grow " role="status">
@@ -38,7 +40,7 @@
               </div>
               <div class="spinner-grow " role="status">
                 <span class="visually-hidden">Loading...</span>
-              </div>
+              </div> -->
             </div>
          </div>
     </div>
